# fitgirl-downloader-pro

./: .env.example  .gitignore  README-2.md  README.md  metadata.json  package-lock.json  package.json  server.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
